Add project save and project list pages